syntax = "proto3";

package protos.steps;

option go_package = "github.com/streamdal/protos/build/go/protos/steps";

enum TransformType {
  TRANSFORM_TYPE_UNKNOWN = 0;
  TRANSFORM_TYPE_REPLACE_VALUE = 1;
  TRANSFORM_TYPE_DELETE_FIELD = 2;
  TRANSFORM_TYPE_OBFUSCATE_VALUE = 3;
  TRANSFORM_TYPE_MASK_VALUE = 4;
}

message TransformStep {
  string path = 1;
  string value = 2; // Should this be bytes? ~DS
  TransformType type = 3;
}
