syntax = "proto3";

package protos.steps;

option go_package = "github.com/streamdal/mono/libs/protos/build/go/protos/steps";

message ValidJSONStep {
}
